# oran-fed-robust

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_STATUS.md  Makefile  README.md  SMOKE_TEST_REPORT.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
docs/: architecture.md  usage.md
results_mlp/: full_results.csv  summary.csv
results_real/: ablation_clip.csv
scripts/: generate_data.py  get_real_data.py  make_convergence.py  make_figures.py  make_paper_tables.py  run_all_sweeps.py  run_benchmark.py  run_dm_ablation.py  run_full_benchmark.py  run_mlp_confirm.py
src/oran_fed_robust/: __init__.py  cli.py  config.py  logging_utils.py
src/oran_fed_robust/aggregation/: __init__.py  base.py  dm_trimmed_mean.py  fedavg.py  fltrust.py  krum.py  median.py  reputation.py  trimmed_mean.py
src/oran_fed_robust/api/: app.py
src/oran_fed_robust/attacks/: __init__.py  poisoning.py
src/oran_fed_robust/data/: __init__.py  partition.py  real_5g.py  real_lumos5g.py  real_traffic.py  synthetic.py
src/oran_fed_robust/evaluation/: __init__.py  metrics.py
src/oran_fed_robust/models/: __init__.py  mlp.py  softmax.py
src/oran_fed_robust/training/: __init__.py  federated.py
tests/: test_aggregation.py  test_api.py  test_config.py  test_imports.py  test_partition.py  test_smoke_pipeline.py
