[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oran-fed-robust"
version = "0.1.0"
description = "Heterogeneity-aware robust federated aggregation benchmark and defense for Open-RAN intelligence"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Author Name", email = "email@domain.edu" }]
keywords = ["federated-learning", "open-ran", "byzantine-robust", "poisoning", "network-security"]
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.2",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.4"]
torch = ["torch>=2.0"]
viz = ["matplotlib>=3.7"]

[project.scripts]
oran-fed-benchmark = "oran_fed_robust.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py39"
